app/assets/stylesheets/boostrap_and_override.scss
@import "bootstrap-sprockets";
@import "bootstrap";

a {
  color: #ff8787;
}

a:hover {
  color: #d54944;
}

/****************** NAV BAR ******************/

.navbar {
  background-color: #d54944;
}

ul.nav a:hover {
  color: #fff !important;
}

ul.nav a {
  color: #ff8787 !important;
}

/* Carousel */

#quote-carousel {
    padding: 0 10px 30px 10px;
    margin-top: 30px;
    /* Control buttons  */
    /* Previous button  */
    /* Next button  */
    /* Changes the position of the indicators */
    /* Changes the color of the indicators */
}
#quote-carousel .carousel-control {
    background: none;
    color: #d54944;
    font-size: 2.3em;
    text-shadow: none;
    margin-top: 30px;
}
#quote-carousel .carousel-control.left {
    left: -60px;
}
#quote-carousel .carousel-control.right {
    right: -60px;
}
#quote-carousel .carousel-indicators {
    right: 50%;
    top: auto;
    bottom: 0px;
    margin-right: -19px;
}
#quote-carousel .carousel-indicators li {
    width: 50px;
    height: 50px;
    margin: 5px;
    cursor: pointer;
    border: 4px solid #CCC;
    border-radius: 50px;
    opacity: 0.4;
    overflow: hidden;
    transition: all 0.4s;
}
#quote-carousel .carousel-indicators .active {
    background: #333333;
    width: 128px;
    height: 128px;
    border-radius: 100px;
    border-color: #d54944;
    opacity: 1;
    overflow: hidden;
}
.carousel-inner {
    min-height: 300px;
}
.item blockquote {
    border-left: none;
    margin: 0;
}
.item blockquote p:before {
    content: "\f10d";
    font-family: 'Fontawesome';
    float: left;
    margin-right: 10px;
}

.last_message{
  background-color: beige;
}

.approve-btn{
  float: right;
}


/****************** MEDIA QUERY ******************/

  @media (max-width: 544px) {
    .edit-description textarea {
      min-height: 210px;
    }
  }

  @media (min-width: 545px) {
    .edit-summary textarea {
      max-height: 54px;
      resize: none;
    }

    .edit-description textarea {
      min-height: 120px;
      resize: none;
    }
  }

/****************** USER PROFILE ******************/

.panel-heading h4 {
  display: inline-block;
}

.panel-heading .btn {
  margin-right: 15px;
}

.profile-container h1.profile-name-header {
  margin: 0;
  display: inline-block;
}

.available-tag {
  margin-left: 20px;
}

.available-tag h3 {
  display: inline-block;
  color: #ff8080;
  margin-right: 15px;
}

.summary-container p {
  margin: 10px 0;
}
.summary-container .fa {
  font-size: 1.5em;
  color: #ff8080;
}

.seo-icons {
  max-width: 200px;
}

.user-dp {
  margin-bottom: 10px;
  max-width: 200px;
  max-height: 200px;
}

abbr[title] {
  border-bottom: none;
}

/****************** USER EDIT PROFILE ******************/

.notice li {
  list-style-type: none;
}

.edit-dp-container {
  text-align: center;
}

.edit-dp-container img {
  width: 100px;
  display: block;
}

.summary-count, .description-count {
  font-style: italic;
  margin-left: 20px;
  color: #FA5858;
  display: none;
}

